Switch to Java 21
* Update dependency com.google.errorprone:error_prone_core to v2.43.0

* Switch to Java 21

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Mark Prins <1165786+mprins@users.noreply.github.com>